--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
 
+
 </head>
 <body>
 
@@ -73,6 +74,36 @@ Entdecke auch die Ideen der Anderen und vor allem: viel Spaß beim Träumen und 
      draggable="true"
      class="draggable"
      data-type="mushroom" />
+
+<img src="ballerina.png"
+     draggable="true"
+     class="draggable"
+     data-type="ballerina" />
+
+<img src="guitar.png"
+     draggable="true"
+     class="draggable"
+     data-type="guitar" />
+
+<img src="skater.png"
+     draggable="true"
+     class="draggable"
+     data-type="skater" />
+    
+<img src="bush.png"
+     draggable="true"
+     class="draggable"
+     data-type="bush" />
+
+<img src="tree1.png"
+     draggable="true"
+     class="draggable"
+     data-type="tree1" />
+
+<img src="tree2.png"
+     draggable="true"
+     class="draggable"
+     data-type="tree2" />
     </aside>
 
   </div>
